--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,15 +8,23 @@ android {
         applicationId "com.tangem.wallet"
         minSdkVersion 23
         targetSdkVersion 27
-        versionCode 1
+        versionCode 26
         versionName "0.85.5.831.dev"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
+            debuggable false
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.debug
+        }
+        debug {
+            debuggable true
+            minifyEnabled false
+//            applicationIdSuffix ".debug"
+            signingConfig signingConfigs.debug
         }
     }
 
@@ -29,7 +37,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-compat:27.1.1'
@@ -40,11 +47,11 @@ dependencies {
     implementation 'com.google.dagger:dagger:2.13'
     implementation 'com.madgag.spongycastle:core:1.56.0.0'
     implementation 'com.madgag.spongycastle:prov:1.56.0.0'
+    implementation 'com.scottyab:rootbeer-lib:0.0.6'
+    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
     implementation 'org.bitcoinj:bitcoinj-parent:0.14.4'
     implementation 'org.bitcoinj:bitcoinj-core:0.14.4'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
-    implementation 'com.scottyab:rootbeer-lib:0.0.6'
-    implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
     implementation 'info.hoang8f:android-segmented:1.0.6'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
