--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,6 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <provider
             android:name="com.tangem.LogFileProvider"
             android:authorities="com.tangem.LogFileProvider"
@@ -38,10 +37,10 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.tangem.presentation.activity.MainActivity"
             android:label="@string/title_activity_main"
@@ -50,7 +49,9 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+
                 <category android:name="android.intent.category.DEFAULT"/>
+
                 <data
                     android:host="www.tangem.com"
                     android:scheme="http"/>
@@ -63,87 +64,75 @@
                 android:name="android.nfc.action.TECH_DISCOVERED"
                 android:resource="@xml/nfc_tech_filter"/>
         </activity>
-
         <activity
             android:name="com.tangem.presentation.activity.RequestPINActivity"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.EmptyWalletActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.SelectBlockchainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.SavePINActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.CardInfoActivity"
             android:label="@string/title_activity_card_info"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.LoadedWalletActivity"
             android:label="@string/title_activity_loaded_wallet"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.VerifyCardActivity"
             android:label="@string/title_activity_loaded_wallet"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.CreateNewWalletActivity"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.PreparePaymentActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.ConfirmPaymentActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.SignPaymentActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.PurgeActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.SwapPINActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.QRScanActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
         <activity
             android:name="com.tangem.presentation.activity.SendTransactionActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
-
+        <activity
+            android:name="com.tangem.presentation.activity.SettingsFeatureActivity"
+            android:label="@string/title_activity_settings_feature">
+        </activity>
     </application>
 
 </manifest>
