--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
         debug {
             debuggable true
             minifyEnabled false
-//            applicationIdSuffix ".debug"
+            applicationIdSuffix ".debug"
             signingConfig signingConfigs.debug
         }
     }
