--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,14 +22,14 @@ android {
 
     buildTypes {
         release {
-            debuggable false
-            minifyEnabled false
+//            debuggable false
+//            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
         debug {
-            debuggable true
-            minifyEnabled false
+//            debuggable true
+//            minifyEnabled false
             applicationIdSuffix ".debug"
             signingConfig signingConfigs.debug
         }
@@ -47,7 +47,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-compat:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.google.zxing:core:3.3.2'
