--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+
 static def generateVersionName() {
-    def gitCount = "git rev-list HEAD --count".execute().text.trim()
-    def gitBranch = "git branch".execute().text.trim()
-//    return gitCount.toInteger() + 831 + " " + gitBranch
-    return gitCount.toInteger() + 831
+    def gitCommitsCount = "git rev-list HEAD --count".execute().text.trim()
+    def gitCurrentBranch = "git rev-parse --abbrev-ref HEAD".execute().text.trim()
+    return gitCommitsCount.toInteger() + 831 + "\\n" + gitCurrentBranch
 }
 
 android {
@@ -49,9 +49,9 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
+    implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.google.zxing:core:3.3.2'
-//    implementation 'com.google.dagger:dagger:2.13'
-//    annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
+    implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.madgag.spongycastle:core:1.56.0.0'
     implementation 'com.madgag.spongycastle:prov:1.56.0.0'
     implementation 'com.scottyab:rootbeer-lib:0.0.6'
@@ -60,9 +60,4 @@ dependencies {
     implementation 'org.bitcoinj:bitcoinj-core:0.14.4'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
     implementation 'info.hoang8f:android-segmented:1.0.6'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.android.volley:volley:1.1.0'
-    testImplementation 'junit:junit:4.12'
-//    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-//    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
