--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,3 +2,9 @@ ext.versions = [
         kotlin      : '1.6.10',
         build_gradle: '7.1.3',
 ]
+
+ext.environmentConfig = [
+        environment: "ENVIRONMENT",
+        testActionEnabled: "TEST_ACTION_ENABLED",
+        logEnabled       : "LOG_ENABLED",
+]
