--- a/app/build.gradle
+++ b/app/build.gradle
@@ -170,6 +170,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling:1.1.1'
     implementation "com.google.accompanist:accompanist-appcompat-theme:0.23.0"
 
+    implementation "com.github.skydoves:androidveil:1.1.2"
+
     implementation("io.coil-kt:coil:2.0.0-rc01")
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
 
